SDK/fixtures/invalid/header-parameter.tps
## [Broken|MysteryMode|Speaker:Alex]

### [Body|focused]

Copy.
